2007-12-16  Ricky Zhou  <ricky.zhou@gmail.com>

	* www.gnome.org/img/flash/ghop-2007.png: Put up Ed Catmur's GIMPed banner
	to fix a typo.  Fixes bug #502740.  

2007-12-16  Andreas Nilsson <nisses.mail@home.se>

	* www.gnome.org/index.wml: removed foss.in event as it's over.

2007-12-07  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  add a new news entry on cheese, remove the banner

2007-12-06  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* www.gnome.org/projects/index.wml: Added Conduit to project list.

2007-12-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/img/flash/Makefile.am: install the new GHOP image :-)

2007-12-03  Andreas Nilsson <nisses.mail@home.se>

	* www.gnome.org/index.wml: changed the banner to GHOP.

2007-12-03  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/index.html: fixed gnome@foss.in year.

2007-11-28  Ricky Zhou  <ricky.zhou@gmail.com>

	* www.gnome.org/projects/index.wml:
	  Correct Metacity capitalization, link to more recent source
	  directory (I was unable to find a main site for Metacity).  
	  Fixes bug #496083.  

2007-12-01  Andreas Nilsson  <nisses.mail@home.se>

	* www.gnome.org/index.wml: added gnome@foss.in event.

2007-11-28  Ricky Zhou  <ricky.zhou@gmail.com>

	* www.gnome.org/index.wml,
	  include/evilsedhack:
	  Correct invalid HTML, as mentioned on gnome-web-list.

2007-11-28  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: add a note about GHOP and change the next
	event to be FOSDEM

2007-11-27  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: add a redirect for a new program

2007-11-19  Mathias Hasselmann  <mathias@openismus.com>

	* www.gnome.org/projects/index.wml: Duh, Murray wants me to call
	libepc "key/value store", instead of "hash table". "Huhu, Brain:
	Have you seen concentration?"

2007-11-19  Mathias Hasselmann  <mathias@openismus.com>

	* www.gnome.org/projects/index.wml: Add libepc and glom.
