@@ -53,7 +53,7 @@
             </p>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.2.4.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.2/cheese-0.2.4.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.2.4
@@ -71,7 +71,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.2.3.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.2/cheese-0.2.3.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.2.3
@@ -109,7 +109,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.2.2.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.2/cheese-0.2.2.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.2.2
@@ -129,7 +129,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.2.1.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.2/cheese-0.2.1.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.2.1
@@ -174,7 +174,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.2.0.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.2/cheese-0.2.0.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.2.0
@@ -204,7 +204,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.1.4.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.1/cheese-0.1.4.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.1.4
@@ -238,7 +238,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.1.3.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.1/cheese-0.1.3.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.1.3
@@ -263,7 +263,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.1.2.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.1/cheese-0.1.2.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.1.2
@@ -289,7 +289,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.1.1.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.1/cheese-0.1.1.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.1.1
@@ -311,7 +311,7 @@
             </div>
 
             <div class="download">
-              <a href="http://live.gnome.org/Cheese/Releases?action=AttachFile&amp;do=get&amp;target=cheese-0.1.0.tar.gz"
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.1/cheese-0.1.0.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
                 Cheese 0.1.0
