@@ -1,3 +1,8 @@
+2007-12-24  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html: 
+	  cheese has its tarballs now on ftp.gnome.org
+
 2007-12-16  Ricky Zhou  <ricky.zhou@gmail.com>
 
 	* www.gnome.org/img/flash/ghop-2007.png: Put up Ed Catmur's GIMPed banner
